--- a/Sample Output/index.html
+++ b/Sample Output/index.html
@@ -1,9 +1,9 @@
 <title> Autodoc Generator </title>
 <h1> Autodoc Generator for PostgreSQL </h1>
-<a href='test_tables.html'> Tables </a>
+<a href='details_tables.html'> Tables </a>
 <br>
-<a href='test_views.html'> Views </a>
+<a href='details_views.html'> Views </a>
 <br>
-<a href='test_sequences.html'> Sequences </a>
+<a href='details_sequences.html'> Sequences </a>
 <br>
-<a href='test_functions.html'> Functions </a>
+<a href='details_functions.html'> Functions </a>
